src/OcelotStudy.Api/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: ${APP_NAME}
  name: ${APP_NAME}
