src/OcelotStudy.Api/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app: ${APP_NAME}
  name: ${APP_NAME}-svc
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ${APP_NAME}
